tests/snapshots/integration__integration_tests__config_update_pty__config_update_output_overwrite_declined.snap
---
source: tests/integration_tests/config_update_pty.rs
expression: "&declined"
---
[33m▲[39m [33mOutput omits deprecated [1mapproved-commands[22m; run [1mwt config update[22m to migrate them to approvals.toml[39m

[36m❯[39m Overwrite migrated.toml? [1m[y/N/?][22m n
[2m○[22m Update cancelled
